Updated GPT related files
